Descriptio and recipe list added

--- a/recipes/egusi-soup.html
+++ b/recipes/egusi-soup.html
@@ -1,2 +1,25 @@
 <h1>Egusi Soup</h1>
 <img src="../images/egusi_soup.jpeg" alt="egusi soup" />
+<h2>Egusi Soup: The Tantalizing Yoruba soup</h2>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, odio. Velit
+  minus voluptate nulla ullam voluptas ex expedita, possimus repellendus dolorem
+  odio fugiat quasi sequi asperiores beatae suscipit, reprehenderit officia!
+</p>
+<p>
+  Ullam quas tenetur hic dignissimos voluptate doloribus amet sit enim quis
+  assumenda quia, deserunt facilis voluptatem blanditiis excepturi sunt aliquam,
+  dicta corrupti repellat. Atque magni iste recusandae. Perferendis, ipsa
+  corporis!
+</p>
+
+<h2>Ingredient</h2>
+<ul>
+  <li>Grounded Egusi</li>
+  <li>Palm oil</li>
+  <li>Onion</li>
+  <li>Cray fish</li>
+  <li>Stock fish</li>
+  <li>Red meat or Chicken</li>
+  <li>Vegetables</li>
+</ul>
