--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>The Odin Recipes</h1>
-    <a href="./recipes/egusi-soup.html"></a>
+    <ul>
+      <li><a href="recipes/egusi-soup.html">Egusi Soup Recipes</a></li>
+      <li><a href="recipes/amala.html">Amala Recipes</a></li>
+      <li><a href="recipes/jollof-rice.html">Jollof Rice Recipes</a></li>
+    </ul>
   </body>
 </html>
