--- a/recipes/amala.html
+++ b/recipes/amala.html
@@ -1,10 +1,9 @@
-<h1>Egusi Soup</h1>
-<img src="../images/egusi_soup.jpeg" alt="egusi soup" width="650px" />
-<h2>Egusi Soup: The Tantalizing Yoruba soup</h2>
+<h1>Amala</h1>
+<img src="../images/amala.jpeg" alt="egusi soup" width="650px" />
+<h2>Amala: The unique swallow meal of the Yorubas</h2>
 <p>
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, odio. Velit
-  minus voluptate nulla ullam voluptas ex expedita, possimus repellendus dolorem
-  odio fugiat quasi sequi asperiores beatae suscipit, reprehenderit officia!
+  minus voluptate nulla ullam voluptas ex expedita.
 </p>
 <p>
   Ullam quas tenetur hic dignissimos voluptate doloribus amet sit enim quis
@@ -15,13 +14,9 @@
 
 <h3>Ingredient</h3>
 <ul>
-  <li>Grounded Egusi</li>
-  <li>Palm oil</li>
-  <li>Onion</li>
-  <li>Cray fish</li>
-  <li>Stock fish</li>
-  <li>Red meat or Chicken</li>
-  <li>Vegetables</li>
+  <li>Yam Flour</li>
+  <li>Boiled water</li>
+  <li>Stew/Soup to according to taste</li>
 </ul>
 
 <h3>Steps</h3>
