--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -1,6 +1,6 @@
-<h1>Egusi Soup</h1>
-<img src="../images/egusi_soup.jpeg" alt="egusi soup" width="650px" />
-<h2>Egusi Soup: The Tantalizing Yoruba soup</h2>
+<h1>Jollof Rice</h1>
+<img src="../images/jollof-rice.jpeg" alt="Jollof Rice" width="650px" />
+<h2>Jollof Rice: Nigeria does it better</h2>
 <p>
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, odio. Velit
   minus voluptate nulla ullam voluptas ex expedita, possimus repellendus dolorem
@@ -15,13 +15,14 @@
 
 <h3>Ingredient</h3>
 <ul>
-  <li>Grounded Egusi</li>
-  <li>Palm oil</li>
+  <li>Perboiled Rice</li>
+  <li>Water</li>
   <li>Onion</li>
   <li>Cray fish</li>
   <li>Stock fish</li>
   <li>Red meat or Chicken</li>
   <li>Vegetables</li>
+  <li>Salt to taste</li>
 </ul>
 
 <h3>Steps</h3>
